# chain-of-thought-pressure

./: .gitignore  ARTIFACTS.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: base.yaml  detector.yaml  eval.yaml  labeling.yaml  train_dpo.yaml  train_grpo.yaml  train_sft.yaml
scripts/: 01_prepare_data.py  02_generate_cot.py  03_train_detector.py  04_calibrate_detector.py  05_generate_preferences.py  06_train_sft.py  07_train_dpo.py  08_train_grpo.py  09_evaluate.py  10_run_experiments.py  playground.py
src/: __init__.py
src/data/: __init__.py  cot_generator.py  doluschat.py
src/detector/: __init__.py  calibrate.py  model.py  train.py
src/eval/: __init__.py  deception.py  generate.py  obfuscation.py  report.py
src/labeling/: __init__.py  solid.py
src/training/: __init__.py  dpo.py  grpo.py  sft.py
src/utils/: __init__.py  parser.py  prompts.py  seed.py
